--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "arch-seeder-tool"
 version = "0.1.0"
-authors = ["al3x al3x@al3x.io"]
+authors = ["al3x alex.vacan.bala@gmail.com"]
 edition = "2021"
 description = "arch seeder tool binary"
 repository = "https://gitlab.com/al3x0s/arch-seeder-tool"
